tests/syntax_error/else_if.jou
def blah() -> None:
    if foo:
        x = 1
    else if bar:  # Error: use 'elif' instead of 'else if'
        x = 2
